Squashed commit of the following:
commit 91c4872c053efb2537c3ec455d2b8919bdb202e0
Author: stephane <fs@email.com>
Date:   Sun Jun 11 18:46:38 2023 +0200

    added ts example

commit 10064318c13e972188c6060b1c2162cb76398bac
Author: stephane <fs@email.com>
Date:   Sun Jun 11 18:44:34 2023 +0200

    added generic colors

commit c155a2df0765054730caabd58cb532a48f3c165e
Author: stephane <fs@email.com>
Date:   Sun Jun 11 18:34:56 2023 +0200

    added go

commit e6ce89bb1e8377d80dddfc2a03b856be4662af92
Author: stephane <fs@email.com>
Date:   Sun Jun 11 18:24:16 2023 +0200

    added dart

commit 5d1f1f4ef40269752786631cbe4c00c663b740d9
Author: stephane <fs@email.com>
Date:   Sun Jun 11 18:15:35 2023 +0200

    added php

commit 4f78b0748ed418570a8bae1aff398f12e7290fae
Author: stephane <fs@email.com>
Date:   Sun Jun 11 18:06:01 2023 +0200

    swift added

commit 22e6818ea7b00b471b267de901c926a44a97a846
Author: stephane <fs@email.com>
Date:   Sun Jun 11 17:47:17 2023 +0200

    added yaml

commit c8a471f667c12fd8eb08207add7a0f56708e3e42
Author: stephane <fs@email.com>
Date:   Sun Jun 11 17:39:18 2023 +0200

    addes sass

commit 944717fbd8a86f4872452e963d9100588ec2ad66
Author: stephane <fs@email.com>
Date:   Sun Jun 11 17:27:30 2023 +0200

    css fixes

commit f67c1ced869751bbab127166296b34f6f3385222
Author: stephane <fs@email.com>
Date:   Sun Jun 11 17:16:34 2023 +0200

    css entity name added

commit 40b371895d28fa310a2bf2259b140f3984d8d5a0
Author: stephane <fs@email.com>
Date:   Sun Jun 11 17:10:48 2023 +0200

    css added

commit e63532325e88e93f1351221ce85dfd8b6767b0d5
Author: stephane <fs@email.com>
Date:   Sun Jun 11 16:47:42 2023 +0200

    python fix

commit 084ca94f68e1d064978623f3de9b4baa3ff91400
Author: stephane <fs@email.com>
Date:   Sun Jun 11 16:42:38 2023 +0200

    python added

commit 473a2eeeb8a611e55c666920fed3c604d8db6127
Author: stephane <fs@email.com>
Date:   Sun Jun 11 14:20:34 2023 +0200

    `json modified

commit 61f01428d51c6da49febf16d9f

--- a/code_samples/sample.css
+++ b/code_samples/sample.css
@@ -26,9 +26,84 @@ body {
   background: #ff0000 !important;
 }
 
+body {
+  background: linear-gradient(to bottom right, lightblue, lightgreen);
+  color: white;
+}
+
+/* Estilo para el encabezado */
+h1 {
+  text-shadow: 2px 2px 4px #000000;
+}
+
+/* Estilo para el botón */
+button {
+  background-color: lightgreen;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+/* Estilo para el enlace */
+a {
+  color: lightgreen;
+}
+
+/* Estilo para la imagen */
+img {
+  box-shadow: 10px 10px lightgreen;
+}
+img[role="main"] {
+  box-shadow: 10px 10px lightgreen;
+}
+
+.block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.block__element {
+  margin: 10px;
+  padding: 10px;
+}
+
+.block__element--modifier {
+  background-color: #f0f0f0;
+}
+
+
 @font-face {
   font-family: "Transylvania";
   src: url("/location/Transylvania.woff2") format("woff2");
-  font-weight: 700;
+  font-weight: 200%;
   font-style: normal;
+}
+
+@media only screen and (min-width: 768px) {
+  body {
+    background-color: lightblue;
+    animation-name: example;
+    animation-duration: 4s;
+  }
+}
+
+/* Estilos para pantallas pequeñas */
+@media only screen and (max-width: 767px) {
+  body {
+    background-color: lightgreen;
+    animation-name: example;
+    animation-duration: 4s;
+  }
+}
+
+@keyframes example {
+  from {background-color: lightblue;}
+  to {background-color: lightgreen;}
 }
