--- a/code_samples/sample.css
+++ b/code_samples/sample.css
@@ -95,7 +95,7 @@ img[role="main"] {
 }
 
 /* Estilos para pantallas pequeñas */
-@media only screen and (max-width: 767px) {
+@media not only screen and (max-width: 767px) {
   body {
     background-color: lightgreen;
     animation-name: example;
@@ -106,4 +106,14 @@ img[role="main"] {
 @keyframes example {
   from {background-color: lightblue;}
   to {background-color: lightgreen;}
+}
+
+@media (width >= var(--size-desktop)) {
+  #tabs-tab-passbook {
+    order: 2;
+  }
+
+  #tabs-tab-pdf {
+    order: 1;
+  }
 }
